--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,13 @@ body {
     /* background-color: #d4d4d0; */
     background-color: #362515;
     font-family: 'Merriweather Sans', sans-serif;
+    font-size: 18px;
+    letter-spacing: 2px;
 }
 
 .navbar{
     background-color:#ccbbbb; 
+   
 }
 
 .nav-container {
@@ -85,6 +88,14 @@ a:hover {
 .carousel{
     top: 6rem;
     margin-bottom: 112px;
+}
+
+.video-wrapper {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  border: 10px solid #eeeeee;
+  border-radius: 10px;
+  box-shadow: 10px 8px 20px 3px rgb(0 0 0 / 34%);
 }
 
 .navbar-nav{
@@ -158,7 +169,8 @@ hr.divider {
 h5 {
     font-weight: bold;
     font-style: oblique;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
+    text-align: center;
 }
 
 .card-text {
@@ -347,6 +359,9 @@ h5 {
   }
   
   footer{
+    background-color:#ccbbbb;
+    color: rgba(0,0,0,.55); 
+    font-weight: 600;
     position: absolute;
     left: 0;
     right: 0;
@@ -355,10 +370,78 @@ h5 {
     padding:0;
   }
    /* Footer end */
+
+   .ruler {
+    color: #fff;
+    font-weight: 700;
+    border-bottom: 2px solid #fff;
+    line-height: 3rem;
+   }
+
+/* section1 */
+.title{
+background-color: rgb(236, 233, 228);
+padding: 10px;
+width:100%;
+}
+
+
+/* season start */
+.season .col-lg-1 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+/* rtl:begin:ignore */
+.season .col-lg-1 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
+/* season end  */  
+/* .circle1{
+width:10vw;
+height: 10vw;
+border-radius: 50%;
+background: blue;
+
+}
+.circle1 .circle_text{
+position: relative;
+top: 42%;
+left:42%;
+} */
+
+
+
+
+.circle1, .circle2, .circle3 {
+margin: 12px;
+border-radius: 50%;
+font-size: 18px;
+line-height: 52px;
+text-align: center;
+color: #fff;
+padding: 16px;
+}
+.circle1{
+background: #5f682e;
+}
+.circle2{
+background: #979d70;
+}
+.circle3{
+background: #6c4100;
+}
+
+label {
+    display: inline-block;
+    margin-top: 20px;
+    font-weight: 900;
+    color: #0fc937;
+    padding-left: 10px;
+}
+
+
   
-   .buttonEnabled {
-    background-color: coral;
-    padding: 4px;
-  }
+
   
 
